# mixr

./: Cargo.toml  README.md  README_en.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-26-mixr-implementation.md  2026-03-29-transcoding-buffering-duration.md
docs/superpowers/specs/: 2026-03-26-mixr-design.md  2026-03-26-wizard-improvements-design.md  2026-03-29-transcoding-buffering-duration-design.md
fixtures/: license
scripts/: install.ps1  install.sh
src/: app.rs  cli.rs  copier.rs  dedup.rs  filters.rs  i18n.rs  lib.rs  main.rs  probe.rs  scanner.rs  transcoder.rs  tui.rs  types.rs
tests/: integration.rs
